# pkgbrowser

./: .dockerignore  Dockerfile  app.py  config.ini.example  pyproject.toml  uwsgi.ini
static/css/: style.css
templates/: base.html  contents.html  index.html  package.html
